# fuzzy-cmp-rs

./: Cargo.toml  README.md
examples/: test_cmp.rs  test_deep_compare.rs  test_deep_search.rs  test_deep_search2.rs  test_hybrid.rs  test_lev.rs  test_search.rs
src/: cmp.rs  hybrid.rs  lev.rs  lib.rs  prelude.rs
src/fuzzy/: compare.rs  mod.rs  search.rs
