[package]
name = "fuzzy-cmp"
description = "Fast, lightweight fuzzy string comparison library for Rust with multiple similarity strategies: byte-level, word-level, Levenshtein-based, and hybrid scoring."
keywords = ["fuzzy", "search", "compare", "filter"]
categories = ["development-tools", "rust-patterns"]
version = "0.2.0"
authors = ["Bulat Sh. <t.me/fuderis>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fuderis/rs-fuzzy-cmp"
edition = "2024"

[dependencies]
distance = { version = "0.4.0", optional = true }

[features]
full = ["lev", "hybrid"]
lev = ["dep:distance"]
hybrid = ["lev"]
